[package]
name = "walker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.5", features = ["derive"] }
crossterm = { version = "0.22", features = [ "serde" ] }
tokio = { version = "0.2.21", features = ["full"] }
tui = { version = "0.16", default-features = false, features = ['crossterm', 'serde'] }
walkdir = "2.3.2"
chrono = { version = "0.4", features = ["serde"] }
tui-input = "0.1.2"
unicode-width = "0.1.9"
